@@ -41,6 +41,7 @@ OpenLDAP 2.4.24 Engineering
 	Fixed slapd support for BDB 5.0+ (ITS#6698)
 	Fixed slapd config leak with olcDbDirectory (ITS#6634)
 	Fixed slapd connectionless warnings (ITS#6747)
+	Fixed slapd listeners destruction (ITS#6736)
 	Fixed slapd to free controls if needed (ITS#6629)
 	Fixed slapd to stop if given unknown options (ITS#6754)
 	Fixed slapd entry comparisons (ITS#6753)
